add module-info and adjust library dependencies so that logging, PC/SC can function properly on java9 under both the IDE and command line build processes.